--- a/config/config.yaml
+++ b/config/config.yaml
@@ -22,8 +22,8 @@ training:
 # Data settings
 data:
   raw_dir: "./data/raw"
-  processed_dir: "./data/processed"
-  annotations_dir: "./data/annotations"
+  labels_dir: "./data/labels"
+  images_dir: "./data/images"
   train_split: 0.8
   val_split: 0.1
   test_split: 0.1
